# sitesurveyorengineering

./: .gitignore  README.md  SECURITY-LICENSING.md  package.json  sample_mountain.csv  skills-lock.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tauri.conf.json
backend/crates/: build-wasm.sh
backend/crates/survey-core/: Cargo.toml
backend/crates/survey-core/src/: alignment.rs  circle_fit.rs  cogo.rs  constrained_tin.rs  contour.rs  csv_io.rs  dxf_io.rs  geojson_io.rs  geom.rs  intersections.rs  lib.rs  profile.rs  resection.rs  terrain.rs  tin.rs  transform.rs  volume.rs  wkt_io.rs
backend/crates/survey-wasm/: Cargo.toml
backend/crates/survey-wasm/src/: lib.rs
backend/solana-programs/sitesurveyor-file-record/: Anchor.toml  README.md
backend/solana-programs/sitesurveyor-file-record/programs/file-record/: Cargo.toml
backend/solana-programs/sitesurveyor-file-record/programs/file-record/src/: lib.rs
backend/src/: lib.rs  license.rs  solana_rpc.rs  survey.rs
backend/supabase/: config.toml
backend/supabase/functions/_shared/: license.ts  platformAdmin.ts  rate_limit.ts  seats.ts  supabase.ts
backend/supabase/functions/license-activate/: index.ts
backend/supabase/functions/license-admin-create/: index.ts
backend/supabase/functions/license-admin-list/: index.ts
backend/supabase/functions/license-admin-update/: index.ts
backend/supabase/functions/license-refresh/: index.ts
backend/supabase/functions/solana-pay-verify/: index.ts
backend/supabase/sql/: 00_all_in_one.sql  01_schema.sql  02_functions_triggers.sql  03_rls_storage.sql  04_seed.sql  05_blockchain_anchoring.sql  06_licensing.sql  07_file_manager_features.sql  07_licensing_enforcement.sql  08_remove_solana_auth.sql  09_embedded_solana_wallet.sql  10_embedded_wallet_mnemonic.sql  11_account_deletion.sql  12_attachment_versions.sql  20_offline_sync_support.sql  90_zimbabwe_dummy_data.sql  99_admin_operations.sql  README.md
frontend/: .env  .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EmbeddedWalletCard.tsx  ErrorBoundary.tsx  GlobalLoader.tsx  GoogleSignInButton.tsx  MobileProjectsPlaceholder.tsx  PageLoader.tsx  PasswordField.tsx  ProtectedRoute.tsx  SelectDropdown.tsx  SessionExpiredBanner.tsx  SolanaLogo.tsx  SolanaWalletCard.tsx  SplashScreen.css  SplashScreen.tsx  WorkspaceRouter.tsx
frontend/src/components/dashboard/: AssetStatusChart.tsx  CalibrationDuePanel.tsx  DashboardCard.tsx  DashboardShell.tsx  KpiCard.tsx  MetricStrip.tsx  ProjectStatusChart.tsx  ProjectTimelineChart.tsx  RecentProjectsTable.tsx  TodaysSchedule.tsx
frontend/src/components/license/: ActivationScreen.tsx  BuildConfigBanner.tsx  FeatureGate.tsx  GraceBanner.tsx  LicenseGate.tsx  UpgradePrompt.tsx
frontend/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  responsive-table.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle-group.tsx  toggle-variants.ts  toggle.tsx  tooltip.tsx
frontend/src/components/workspace/: WorkspaceShell.tsx
frontend/src/contexts/: EmbeddedWalletContext.ts  EmbeddedWalletContext.tsx  LicenseContext.tsx
frontend/src/features/admin/: adminNav.ts
frontend/src/features/admin/dashboard/: admin-platform-dashboard.tsx  recent-workspaces-table.tsx  (+1 more)
frontend/src/features/business/: BusinessWorkspaceShell.tsx  navigation.ts  viewRegistry.tsx
frontend/src/features/personal/: PersonalWorkspaceShell.tsx  navigation.ts  viewRegistry.tsx
frontend/src/features/platform/: PlatformOperatorWorkspaceShell.tsx
frontend/src/features/workspace/: account.test.ts  account.ts  types.ts
frontend/src/hooks/: useEmbeddedWallet.ts
frontend/src/lib/: entitlements.ts  mappers.ts  permissions.ts
frontend/src/lib/auth/: app-user.ts  auth-errors.test.ts  auth-errors.ts  auth-store.ts  session.ts
frontend/src/lib/hooks/: useOfflineSyncStatus.ts  useProjects.ts
frontend/src/lib/localDb/: db.ts  schemas.ts  sync.ts  utils.ts  wmModels.ts  wmSchema.ts
frontend/src/lib/payments/: fileAnchor.ts  solanaPay.ts  verify.ts
frontend/src/lib/repositories/: adminPlatform.ts  assets.ts  attachments.ts  cadDrawings.ts  contacts.ts  embeddedWallets.ts  features.ts  invitations.ts  jobAssignments.ts  jobEvents.ts  jobs.ts  marketplace.ts  marketplaceRequests.ts  notificationEvents.ts  notifications.ts  organizations.ts  paymentMethods.ts  profiles.ts  projectMetrics.ts  projects.ts  quotes.ts  timeTracking.ts
frontend/src/lib/solana/: config.ts  embeddedWallet.ts  fileRecordProgram.ts  provider.ts  tauriRpc.ts  useEmbeddedSolanaWallet.ts  useSolanaWallet.ts  walletHistory.ts
frontend/src/lib/supabase/: client.ts  types.ts
frontend/src/pages/admin/: AdminActivityPage.tsx  AdminAuditPage.tsx  AdminFeatureRequestsPage.tsx  AdminLicensesPage.tsx  AdminOverviewPage.tsx  AdminUsersPage.tsx  AdminWorkspacesPage.tsx
frontend/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.test.tsx  LoginPage.tsx  ResetPasswordPage.tsx  SignupPage.test.tsx  SignupPage.tsx
frontend/src/pages/business/: BusinessDashboardPage.tsx  DispatchPage.tsx  ProfessionalsPage.tsx  TeamPage.tsx
frontend/src/pages/personal/: PersonalDashboardPage.tsx  SchedulePage.tsx
frontend/src/pages/shared/: AssetManagementPage.tsx  BillingPage.tsx  ContactsPage.tsx  FileManagerPage.tsx  InvoicesPage.tsx  JobsPage.tsx  MarketplaceFeatures.tsx  MarketplacePage.tsx  NotificationsPage.tsx  ProfileSettingsPage.tsx  ProjectHubPage.tsx  QuotesPage.tsx  TimeTrackingPage.tsx
frontend/src/services/: license.ts  licenseAdmin.ts
frontend/src/styles/: auth.css  cad-admin-theme.css  cad.css  error-boundary.css  global-loader.css  metric-strip.css  page-loader.css  pages.css  project-hub.css  session-banner.css  shell-loading.css  survey-tools.css
scripts/: setup-licensing.mjs
supabase/.temp/: linked-project.json
(+82 files in other folders)
