[package]
name = "survey-core"
version = "0.1.0"
description = "Pure-Rust survey geometry engine (TIN, contours, volumes) for SiteSurveyor."
authors = ["SiteSurveyor Engineering"]
edition = "2021"
license = "MIT"

# This crate is intentionally free of Tauri and WASM dependencies so the same
# geometry code can be reused by:
#   - the `survey-wasm` wasm-bindgen wrapper (web + desktop frontend), and
#   - optional `#[tauri::command]` adapters in the desktop shell.
# Keep it pure and unit-testable, mirroring the existing pure TS `cogo.ts`.

[lib]
crate-type = ["rlib"]

[dependencies]
spade = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# GeoRust ecosystem (https://georust.org). All pure-Rust and WASM-safe, so they
# compile cleanly into `survey-wasm`. Native-only crates (proj, gdal, shapefile,
# las) deliberately live in the desktop crate, NOT here.
geo = "0.28"
geo-types = "0.7"
geojson = "0.24"
wkt = "0.11"
# Marching-squares isoline generation over a regular grid (d3-contour port).
# Pure-Rust and WASM-safe. Used for contouring rasterized DEM/grid sources;
# TIN contouring uses the exact marching-triangles path in `contour.rs`.
contour = "0.13"

[dev-dependencies]
approx = "0.5"
