[package]
name = "file-record"
version = "0.1.0"
description = "SiteSurveyor on-chain file record anchoring"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "file_record"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
